--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>AJ Nasim / software developer</title>
+        <title>AJ Nasim / Front-end or a Full-stack-developer</title>
         <meta name="description" content="I am a front-and developer or a full-stack developer skills html css bootstrap jquery ajax php mysql laravel javascript">
         <meta name="keyword" content="software-developer,software-engineer,front-end-developer,full-stack-developer,ux-engineer,experinced developer,nasim,ajnasim,html,css,bootstrap,jquery,ajax,php,mysql,laravel,javascript">
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
